--- a/app/src/main/res/layout/dialog_inicio_detalle_profesores.xml
+++ b/app/src/main/res/layout/dialog_inicio_detalle_profesores.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent">
 
     <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/profile_image"
+        android:id="@+id/foto_materia"
         android:layout_width="124dp"
         android:layout_height="127dp"
         android:layout_marginStart="8dp"
@@ -32,7 +32,7 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/profile_image" />
+        app:layout_constraintTop_toBottomOf="@+id/foto_materia" />
 
     <TextView
         android:id="@+id/Categoria"
