--- a/app/src/main/res/layout/card_item_inicio_alumnos.xml
+++ b/app/src/main/res/layout/card_item_inicio_alumnos.xml
@@ -2,6 +2,7 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
 
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/inicio_cardview_alumnos"
     android:layout_width="180dp"
     android:layout_height="180dp"
@@ -15,7 +16,7 @@
     android:orientation="vertical"
     android:padding="10dp"
     card_view:cardBackgroundColor="@color/colorPrimaryAlpha"
-    card_view:cardCornerRadius="100dp"
+    card_view:cardCornerRadius="0dp"
     card_view:cardElevation="0dp">
 
 
@@ -35,6 +36,23 @@
             android:textAlignment="center"
             android:textColor="#454444"
             android:textStyle="bold" />
+
+        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/foto_materia"
+            android:layout_width="105dp"
+            android:layout_height="107dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="43dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="32dp"
+            android:src="@drawable/ic_arte"
+            app:civ_border_color="#FF000000"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.506"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
 
     </RelativeLayout>
