--- a/app/src/main/res/layout/card_item_inicio_listaprofesores_alumnos.xml
+++ b/app/src/main/res/layout/card_item_inicio_listaprofesores_alumnos.xml
@@ -11,11 +11,12 @@
     android:layout_marginBottom="8dp"
     android:clickable="true"
     android:focusable="true"
+
     android:foreground="?android:attr/selectableItemBackground"
     android:orientation="vertical"
     android:padding="10dp"
     card_view:cardBackgroundColor="@color/cardview_light_background"
-    card_view:cardCornerRadius="6dp"
+    card_view:cardCornerRadius="0dp"
     card_view:cardElevation="6dp">
 
     <android.support.constraint.ConstraintLayout
@@ -29,7 +30,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="8dp"
-            android:src="@drawable/imageperfil"
+            android:src="@drawable/fotoperfiljuego"
             app:civ_border_color="#FF000000"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.506"
@@ -38,8 +39,8 @@
 
         <TextView
             android:id="@+id/nombre"
-            android:layout_width="128dp"
-            android:layout_height="19dp"
+            android:layout_width="177dp"
+            android:layout_height="18dp"
             android:layout_alignParentTop="true"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
