--- a/app/src/main/res/layout/dialog_inicio_detalle_profesores.xml
+++ b/app/src/main/res/layout/dialog_inicio_detalle_profesores.xml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto">
+    <android.support.v7.widget.CardView
+        android:layout_width="387dp"
+        android:layout_height="142dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        card_view:cardCornerRadius="50dp"/>
 
     <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/foto_materia"
@@ -13,24 +20,27 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="8dp"
-        android:src="@drawable/imageperfil"
+        android:src="@drawable/fotoperfiljuego"
         app:civ_border_color="#FF000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.45"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+
     <TextView
         android:id="@+id/nombre_profesor"
         android:layout_width="134dp"
         android:layout_height="23dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="60dp"
         android:layout_marginEnd="8dp"
+        android:gravity="center_horizontal"
         android:text="Nombre"
         android:textSize="18dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.427"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/foto_materia" />
 
@@ -67,7 +77,7 @@
         android:layout_marginStart="36dp"
         android:layout_marginTop="14dp"
         android:layout_marginEnd="63dp"
-        android:text="Contenido"
+        android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sit amet ultricies dui, sit amet ornare turpis. Aliquam ut vestibulum mauris. Morbi vel tincidunt turpis, et lacinia urna. Nullam vehicula, metus vitae fermentum cursus, dolor nibh pretium purus, id rutrum odio tortor vitae enim. Nunc dictum augue et viverra sagittis."
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Descripcion" />
@@ -75,45 +85,64 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/lista_categoria"
         android:layout_width="282dp"
-        android:layout_height="29dp"
+        android:layout_height="46dp"
         android:layout_marginStart="36dp"
-        android:layout_marginTop="16dp"
         android:layout_marginEnd="66dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Categoria" />
 
     <Button
         android:id="@+id/Descarga_documento"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="36dp"
-        android:layout_marginEnd="163dp"
+        android:layout_width="200dp"
+        android:layout_height="53dp"
+        android:layout_marginStart="80dp"
+        android:layout_marginTop="456dp"
+        android:layout_marginEnd="8dp"
         android:text="Descarga documento"
+        android:textSize="12dp"
+        android:theme="@style/AppTheme.Bienvenida_Button"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/contenido_descripcion" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/Cerrar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:text="cerrar"
+        android:layout_width="33dp"
+        android:layout_height="32dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="28dp"
+        android:layout_marginEnd="32dp"
+        android:background="@drawable/cerrar"
+        android:theme="@style/AppTheme.Bienvenida_Button"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/Solicitar_clases"
-        android:layout_width="179dp"
-        android:layout_height="47dp"
-        android:layout_marginStart="39dp"
-        android:layout_marginTop="6dp"
-        android:layout_marginEnd="166dp"
+        android:layout_width="200dp"
+        android:layout_height="46dp"
+        android:layout_marginStart="80dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:text="Solicitar clases"
+        android:textSize="12dp"
+        android:theme="@style/AppTheme.Bienvenida_Button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <android.support.v7.widget.CardView
+        android:layout_width="387dp"
+        android:layout_height="142dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Descarga_documento" />
+        app:layout_constraintTop_toTopOf="parent" />
+
 
 </android.support.constraint.ConstraintLayout>
