--- a/app/src/main/res/layout/fragment_inicio_solicitar_curso.xml
+++ b/app/src/main/res/layout/fragment_inicio_solicitar_curso.xml
@@ -71,8 +71,8 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="8dp"
+        android:theme="@style/AppTheme.Bienvenida_Button"
         android:text="@string/inicio_confirmar_solicitar_curso"
-        android:theme="@style/AppTheme.Inicio_Button_Solicitar_Curso"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/solicitud_direccion" />
@@ -85,7 +85,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="8dp"
         android:text="@string/inicio_cancelar_curso"
-        android:theme="@style/AppTheme.Inicio_Button_Cancelar_Curso"
+        android:theme="@style/AppTheme.Bienvenida_Button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_confirmar_solicitar_curso" />
