--- a/app/src/main/res/layout/fragment_solicitudes_detalle.xml
+++ b/app/src/main/res/layout/fragment_solicitudes_detalle.xml
@@ -34,6 +34,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:text="Detalle de la Solicitud"
+        android:theme="@style/AppTheme.Bienvenida_Button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/solicitudes_detalle_text1" />
