--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,8 @@
         <item name="android:windowAnimationStyle">@null</item>
     </style>
 
+    <style name="estilo" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:textColor">#ffe330</item>
+    </style>
+
 </resources>
