--- a/app/src/main/res/layout/fragment_inicio_solicitar_curso.xml
+++ b/app/src/main/res/layout/fragment_inicio_solicitar_curso.xml
@@ -1,11 +1,11 @@
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.educasa.Inicio.InicioFragments.InicioSolicitarCurso">
 
-    <android.support.v7.widget.Toolbar
+    <androidx.appcompat.widget.Toolbar
         android:id="@+id/inicio_toolbar_solicitar_curso"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -16,193 +16,161 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
-        android:id="@+id/solicitud_descripcion"
-        android:layout_width="251dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:ems="18"
-        android:inputType="textPersonName"
-        android:text="Categoría:"
-        android:singleLine="true"
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="544dp"
+        android:layout_marginTop="56dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.145"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <EditText
-        android:id="@+id/solicitud_detalles"
-        android:layout_width="251dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:ems="18"
-        android:inputType="textPersonName"
-        android:text="Precio"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.153"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-    <EditText
-        android:id="@+id/fecha"
-        android:layout_width="106dp"
-        android:layout_height="39dp"
-        android:ems="18"
-        android:inputType="textPersonName"
-        android:text="01/01/1999"
-        tools:layout_editor_absoluteX="24dp"
-        tools:layout_editor_absoluteY="350dp" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="52dp"
+                android:orientation="horizontal">
 
-    <Button
-        android:id="@+id/btn_confirmar_solicitar_curso"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="16dp"
-        android:text="@string/inicio_confirmar_solicitar_curso"
-        android:theme="@style/AppTheme.Bienvenida_Button"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+                <Spinner
+                    android:id="@+id/inicio_solicitud_curso_spinner"
+                    android:layout_width="252dp"
+                    android:layout_height="38dp" />
 
-    <Button
-        android:id="@+id/btn_cancelar_curso"
-        android:layout_width="47dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:text="@string/inicio_cancelar_curso"
-        android:theme="@style/AppTheme.Bienvenida_Button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.967"
-        app:layout_constraintStart_toEndOf="@+id/textView2"
-        app:layout_constraintTop_toBottomOf="@+id/inicio_toolbar_solicitar_curso" />
+            </LinearLayout>
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="17dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="23dp"
-        android:text="Categoría:"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/inicio_toolbar_solicitar_curso" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="58dp"
+                android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="81dp"
-        android:layout_height="20dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="23dp"
-        android:layout_marginEnd="8dp"
-        android:text="Descripción:"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.062"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/solicitud_descripcion" />
+                <EditText
+                    android:id="@+id/inicio_solicitar_curso_descripcion"
+                    android:layout_width="252dp"
+                    android:layout_height="38dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:ems="10"
+                    android:inputType="textMultiLine"
+                    android:text="Descripción"                />
+            </LinearLayout>
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="23dp"
-        android:layout_marginEnd="8dp"
-        android:text="Precio:"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.055"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/descripción" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="64dp"
+                android:orientation="horizontal">
 
-    <Button
-        android:id="@+id/btn_subir_imagen"
-        android:layout_width="wrap_content"
-        android:layout_height="48dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="372dp"
-        android:layout_marginEnd="8dp"
-        android:text="Subir imagen"
-        android:theme="@style/AppTheme.Bienvenida_Button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.112"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Hora" />
+                <EditText
+                    android:id="@+id/inicio_solicitar_curso_precio"
+                    android:layout_width="251dp"
+                    android:layout_height="40dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:ems="18"
+                    android:inputType="textPersonName"
+                    android:text="Precio" />
+            </LinearLayout>
 
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="8dp"
-        android:text="Dirección:"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.065"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fecha" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:orientation="horizontal">
 
-    <EditText
-        android:id="@+id/Dirección"
-        android:layout_width="246dp"
-        android:layout_height="41dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="25dp"
-        android:layout_marginEnd="8dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Direccion"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.065"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+                <EditText
+                    android:id="@+id/solicitar_curso_fecha"
+                    android:layout_width="106dp"
+                    android:layout_height="39dp"
+                    android:ems="18"
+                    android:inputType="textPersonName"
+                    android:text="01/01/1999"
+                    tools:layout_editor_absoluteX="24dp"
+                    tools:layout_editor_absoluteY="350dp" />
 
-    <EditText
-        android:id="@+id/hora"
-        android:layout_width="99dp"
-        android:layout_height="39dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="12:00"
-        tools:layout_editor_absoluteX="176dp"
-        tools:layout_editor_absoluteY="350dp" />
+                <EditText
+                    android:id="@+id/inicio_solicitar_curso_hora"
+                    android:layout_width="99dp"
+                    android:layout_height="39dp"
+                    android:ems="10"
+                    android:inputType="textPersonName"
+                    android:text="12:00"
+                    tools:layout_editor_absoluteX="176dp"
+                    tools:layout_editor_absoluteY="350dp" />
+            </LinearLayout>
 
-    <EditText
-        android:id="@+id/descripción"
-        android:layout_width="252dp"
-        android:layout_height="38dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:ems="10"
-        android:inputType="textMultiLine"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.135"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
-    <android.support.constraint.Guideline
-        android:id="@+id/guideline2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.50" />
+                <EditText
+                    android:id="@+id/inicio_solicitar_curso_direccion"
+                    android:layout_width="246dp"
+                    android:layout_height="41dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="25dp"
+                    android:layout_marginEnd="8dp"
+                    android:ems="10"
+                    android:inputType="textPersonName"
+                    android:text="Direccion" />
 
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="70dp"
-        android:layout_height="41dp"
-        android:text="fecha"
-        tools:layout_editor_absoluteX="24dp"
-        tools:layout_editor_absoluteY="309dp" />
+            </LinearLayout>
 
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="64dp"
-        android:layout_height="41dp"
-        android:text="hora"
-        tools:layout_editor_absoluteX="176dp"
-        tools:layout_editor_absoluteY="309dp" />
+            <Button
+                android:id="@+id/btn_confirmar_solicitar_curso"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="16dp"
+                android:text="@string/inicio_confirmar_solicitar_curso"
+                android:theme="@style/AppTheme.Bienvenida_Button" />
 
-</android.support.constraint.ConstraintLayout>
+            <Button
+                android:id="@+id/btn_subir_imagen"
+                android:layout_width="wrap_content"
+                android:layout_height="48dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="3dp"
+                android:layout_marginEnd="8dp"
+                android:text="Subir imagen"
+                android:theme="@style/AppTheme.Bienvenida_Button"
+               />
+
+            <Button
+                android:id="@+id/btn_cancelar_curso"
+                android:layout_width="47dp"
+                android:layout_height="36dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:text="@string/inicio_cancelar_curso"
+                android:theme="@style/AppTheme.Bienvenida_Button" />
+
+            <Button
+                android:id="@+id/button2"
+                android:layout_width="70dp"
+                android:layout_height="41dp"
+                android:text="fecha"
+                tools:layout_editor_absoluteX="24dp"
+                tools:layout_editor_absoluteY="309dp" />
+
+            <Button
+                android:id="@+id/button3"
+                android:layout_width="64dp"
+                android:layout_height="41dp"
+                android:text="hora"
+                tools:layout_editor_absoluteX="176dp"
+                tools:layout_editor_absoluteY="309dp" />
+
+            <fragment
+                android:layout_width="match_parent"
+                android:layout_height="103dp"
+                tools:layout_editor_absoluteY="464dp" />
+
+        </LinearLayout>
+
+    </ScrollView>
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
