--- a/app/src/main/res/menu/inicio_buscador.xml
+++ b/app/src/main/res/menu/inicio_buscador.xml
@@ -5,6 +5,6 @@
         android:title="Buscar"
         android:icon="@drawable/ic_inicio_search_24dp"
         app:showAsAction="collapseActionView|ifRoom"
-        app:actionViewClass="android.support.v7.widget.SearchView" />
+        app:actionViewClass="androidx.appcompat.widget.SearchView" />
 </menu>
     <!--android:icon="@android:drawable/ic_menu_search"-->
