--- a/app/src/main/res/layout/card_item_misclases_alumnos.xml
+++ b/app/src/main/res/layout/card_item_misclases_alumnos.xml
@@ -1,39 +1,94 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/misclases_cardview_alumnos"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="132dp"
-    android:padding="10dp"
-    card_view:cardElevation="6dp"
-    card_view:cardCornerRadius="6dp"
+    android:layout_height="140dp"
     android:layout_marginStart="6dp"
-    android:layout_marginEnd="6dp"
     android:layout_marginTop="6dp"
+    android:layout_marginEnd="6dp"
     android:layout_marginBottom="8dp"
     android:clickable="true"
     android:focusable="true"
+    android:foreground="?android:attr/selectableItemBackground"
+    android:orientation="vertical"
+    android:padding="10dp"
     card_view:cardBackgroundColor="@color/cardview_light_background"
-    android:foreground="?android:attr/selectableItemBackground">
+    card_view:cardCornerRadius="6dp"
+    card_view:cardElevation="6dp">
 
 
-    <RelativeLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="124dp">
+        android:layout_height="match_parent">
+
+        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/foto_materia"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginEnd="8dp"
+            android:src="@drawable/fotoperfiljuego"
+            app:civ_border_color="#FF000000"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.03"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+
         <TextView
-            android:id="@+id/nombre"
-            android:layout_width="146dp"
-            android:layout_height="38dp"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="10dp"
+            android:id="@+id/mis_clases_categoria"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginEnd="8dp"
+            android:text="Categoría"
+            card_view:layout_constraintEnd_toEndOf="parent"
+            card_view:layout_constraintHorizontal_bias="0.068"
+            card_view:layout_constraintStart_toEndOf="@+id/foto_materia"
+            card_view:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/mis_clases_profesores"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:layout_marginBottom="0dp"
-            android:text="misclases"
-            android:textColor="#000" />
+            android:layout_marginEnd="8dp"
+            android:text="Nombre de profesor"
+            card_view:layout_constraintEnd_toEndOf="parent"
+            card_view:layout_constraintHorizontal_bias="0.105"
+            card_view:layout_constraintStart_toEndOf="@+id/foto_materia"
+            card_view:layout_constraintTop_toBottomOf="@+id/mis_clases_categoria" />
 
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:text="Hora"
+            card_view:layout_constraintEnd_toEndOf="parent"
+            card_view:layout_constraintHorizontal_bias="0.059"
+            card_view:layout_constraintStart_toEndOf="@+id/foto_materia"
+            card_view:layout_constraintTop_toBottomOf="@+id/mis_clases_profesores" />
 
-
-    </RelativeLayout>
+        <TextView
+            android:id="@+id/mis_clases_fecha"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="8dp"
+            android:text="fecha"
+            card_view:layout_constraintEnd_toEndOf="parent"
+            card_view:layout_constraintHorizontal_bias="0.06"
+            card_view:layout_constraintStart_toEndOf="@+id/foto_materia"
+            card_view:layout_constraintTop_toBottomOf="@+id/textView5" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
